discussion/kv_engine/185684/185684_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Enable history scan for CDC backfill

Replace the todo markers with code that now utilises the magma history
API - this now means scanAllVersions for example is hooked into the
magma history scanning API.

Add new tests that validate multiple versions can be stored and
returned.

Also required are changes to unit tests to respect new expectation
checks that occur in magma - primarily that flushing writes ordered
batches - this is only a problem for tests which bypass the flusher
and call KVStore directly.

Change-Id: I2f91ade0ee96eff0058c7fafacbc0aca7cda1b02

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-31 13:49:31.000000000
Message: 
Uploaded patch set 4: New patch set was added with same tree, parent, and commit message as Patch Set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-31 13:49:46.000000000
Message: 
Patch Set 4: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/335226/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-31 14:09:02.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/976/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28: error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore" [clang-diagnostic-error]
                  kvstore->getHistoryStartSeqno(vbid).value_or(~0ull));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2044:69: note: expanded from macro "EXPECT_EQ"
  EXPECT_PRED_FORMAT2(::testing::internal::EqHelper::Compare, val1, val2)
                                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:40: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:43: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/976/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/976/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1168/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\magma-kvstore_test.cc(809): error C2039: "getHistoryStartSeqno": is not a member of "MockMagmaKVStore" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1168/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/987/ : FAILURE

Compile error at [2023-01-31T13:59:15.335Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: ?class MockMagmaKVStore? has no member named ?getHistoryStartSeqno?; did you mean ?historyStartSeqno??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/987/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/989/ : FAILURE

Compile error at [2023-01-31T14:01:14.704Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/989/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/997/ : FAILURE

Compile error at [2023-01-31T14:01:30.247Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/997/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/969/ : FAILURE

Compile error at [2023-01-31T14:00:23.337Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/969/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/991/ : FAILURE

Compile error at [2023-01-31T13:56:09.715Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: ?class MockMagmaKVStore? has no member named ?getHistoryStartSeqno?; did you mean ?historyStartSeqno??
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/991/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1289/ : FAILURE

Compile error at [2023-01-31T13:58:07.388Z] ../kv_engine/engines/ep/tests/module_tests/magma-kvstore_test.cc:810:28:
error: no member named "getHistoryStartSeqno" in "MockMagmaKVStore"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1289/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/946/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22459/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/998/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-02-01 10:57:13.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
